--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "travel-site",
   "version": "1.0.0",
+  "scripts": {
+    "webpack": "webpack",
+    "watch": "gulp watch"
+  },
   "dependencies": {
     "jquery": "3.2.1",
     "jquery-smooth-scroll": "2.2.0",
@@ -34,6 +38,6 @@
     "postcss-nested": "^2.1.2",
     "postcss-simple-vars": "4.1.0",
     "stylelint-config-recommended": "^2.1.0",
-    "webpack": "3.8.1"
+    "webpack": "^3.8.1"
   }
 }
